--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,64 @@
-   /* Estilos para la barra lateral */
-   .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 250px;
-    height: 100%;
-    background-color: #f8f9fa;
-    padding: 15px;
-    border-right: 1px solid #ddd;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-}
+     /* Estilos para la barra lateral */
+     * {
+        margin: 0;
+        box-sizing: border-box;
+      }
+     .sidebar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 250px;
+        height: 100%;
+        background-color: #f8f9fa;
+        padding: 15px;
+        border-right: 1px solid #ddd;
+        box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    }
 
-.sidebar h5 {
-    margin-bottom: 20px;
-}
+    .sidebar h5 {
+        margin-bottom: 20px;
+    }
 
-.sidebar ul {
-    list-style-type: none;
-    padding-left: 0;
-}
+    .sidebar ul {
+        list-style-type: none;
+        padding-left: 0;
+    }
 
-.sidebar ul li {
-    padding: 5px 0;
-}
+    .sidebar ul li {
+        padding: 5px 0;
+    }
 
-.sidebar ul li a {
-    text-decoration: none;
-    color: #007bff;
-}
+    .sidebar ul li a {
+        text-decoration: none;
+        color: #007bff;
+    }
 
-.sidebar ul li a:hover {
-    text-decoration: underline;
-}
+    .sidebar ul li a:hover {
+       background-color: rgb(43, 168, 226);
+       color: white;
+    }
 
-.content {
-    margin-left: 270px;
-}
+    .content {
+        margin-left: 270px;
+    }
 
-.content h3 {
-    margin-top: 20px;
-}
+    .content h3 {
+        margin-top: 20px;
+    }
 
-.content p {
-    font-size: 1.1rem;
-    line-height: 1.6;
-}
+    .content p {
+        font-size: 1.1rem;
+        line-height: 1.6;
+    }
 
-.content img {
-    max-width: 100%;
+    .content img {
+        max-width: 100%;
+        height: auto;
+        margin-top: 20px;
+    }
+img {
+    width: 100%;
+    max-width: 400px;
     height: auto;
-    margin-top: 20px;
-}
+    aspect-ratio: 16/2;
+  }
